<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_check"
            android:icon="@drawable/ic_menu_view"
            android:title="@string/nav_check" />
        <item
            android:id="@+id/nav_reg"
            android:icon="@drawable/ic_menu_register"
            android:title="@string/nav_registro" />
        <item
            android:id="@+id/nav_monitor"
            android:icon="@drawable/ic_monitor"
            android:title="@string/nav_monitor" />
        <item
            android:id="@+id/nav_curva"
            android:icon="@drawable/ic_curva"
            android:title="@string/nav_dx" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_config" />
    </group>

    <item android:title="@string/nav_comu">
        <menu>
            <item
                android:id="@+id/nav_conect"
                android:icon="@drawable/bluetooth"
                android:title="@string/nav_conectar" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

    <item android:title="@string/nav_acerca">
        <menu>
            <item
                android:id="@+id/nav_acerca"
                android:icon="@drawable/ic_menu_info_details"
                android:title="@string/nav_glusimo" />
        </menu>
    </item>

</menu>
