<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="320dp"
    android:layout_gravity="center|top"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/titulo_config"
        style="@style/tituloFragment"
        android:id="@+id/titulo_fragment_config"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorLetra"
        />

    <FrameLayout
        android:layout_weight="5"
        android:id="@+id/frame_medicion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/elemento_lista"
                android:text="@string/demo"
                android:id="@+id/cb_medicion" />

            <TextView
                style="@style/elemento_lista"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unidades"
                android:id="@+id/textView7" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    style="@style/elemento_lista"
                    android:id="@+id/textView2"
                    />

                <EditText
                    android:hint="@string/max_hint"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColorHint="@color/colorLetraHint"
                    android:inputType="number"
                    android:ems="20"
                    android:id="@+id/edit_max"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/elemento_lista"
                    android:text="@string/hipo"
                    android:id="@+id/textView3" />

                <EditText
                    android:hint="@string/hipo_hint"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColorHint="@color/colorLetraHint"
                    android:inputType="number"
                    android:ems="20"
                    android:id="@+id/edit_hipo" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/elemento_lista"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hiper"
                    android:id="@+id/textView4" />

                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColorHint="@color/colorLetraHint"
                    android:hint="@string/hiper_hint"
                    android:inputType="number"
                    android:ems="20"
                    android:id="@+id/edit_hiper" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/elemento_lista"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hiper_max"
                    android:id="@+id/textView5" />

                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColorHint="@color/colorLetraHint"
                    android:hint="@string/hiper_max_hint"
                    android:inputType="number"
                    android:ems="20"
                    android:id="@+id/edit_hiper_max" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="0.2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                >

                <Button
                    android:layout_marginRight="@dimen/margen_mini"
                    style="@style/textoBoton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/pop_boton_aceptar"
                    android:id="@+id/button_aceptar"
                    android:layout_gravity="center_vertical" />

                <Button
                    style="@style/textoBoton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/boton_cancelar"
                    android:id="@+id/button_cancelar"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_registro"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        >

    </FrameLayout>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/frame_curva"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

    </FrameLayout>


</LinearLayout>
