<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:layout_gravity="center|top"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <!--Titulo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titulo_notificacion"
                style="@style/tituloFragment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/pop_titulo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>


        <!--Linea-->
        <TextView
            android:id="@+id/linea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".05"
            android:background="@color/colorLetra" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/text_notificacion"
            style="@style/tituloFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/pop_mensaje"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:layout_marginTop="@dimen/margen_chiquis"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/notificacion_imagen"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:layout_weight="3" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight=".7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton_not_aceptar"
            style="@style/textoBoton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margen_mini"
            android:layout_weight="1"
            android:text="@string/boton_noti_aceptar" />

        <Button
            android:id="@+id/boton_not_pausar"
            style="@style/textoBoton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/boton_noti_pausar" />

    </LinearLayout>

</LinearLayout>
