<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondoapp">

    <TextView
        android:layout_marginTop="@dimen/margen_mini"
        android:layout_weight="1"
        android:id="@+id/consola_tendencias"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/tituloFragment"
        android:text="@string/titulo_tendencias" />

    <LinearLayout
        android:layout_marginTop="@dimen/margen_mini"
        android:layout_weight="9"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_weight="8"
            android:layout_marginRight="@dimen/margen_mediano"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp">

            <ImageView
                style="@style/tituloFragment"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/eje_concentracion"
                android:layout_gravity="center_vertical"
                />

            <ImageView
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/canvas"
                android:layout_gravity="center_vertical"
                android:background="@color/colorBottomDark"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margen_mini"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >
            <TextView
                android:layout_weight="1"
                android:id="@+id/eje_tiempo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/tituloFragment"
                android:text="@string/eje_tiempo" />
        </LinearLayout>


    </LinearLayout>
    <TextView
        android:layout_weight="1"
        android:id="@+id/curva_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/tituloFragment"
        android:text="@string/info_tendencias" />
</LinearLayout>
